workaround for the issue that mongoid 6.1 does not close connections which caused memory leak

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -39,9 +39,11 @@ production:
       hosts:
         - threebandb:27017
       options:
+        write: 
+          w: 1
         read:
           mode: :secondary_preferred
         connect: :direct
-        max_pool_size: 10
+        max_pool_size: 3
         wait_queue_timeout: 1
         connect_timeout: 10 
